load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "test_local_runtime",
    size = "small",
    srcs = ["test_local_runtime.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/core",
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_contexts",
    size = "small",
    srcs = ["test_contexts.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/core",
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_dummy_textgen",
    size = "small",
    srcs = ["test_dummy_textgen.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/pipelines",
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_chat_completions",
    size = "small",
    srcs = ["test_chat_completions.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/pipelines",
        "//max/python/max/experimental/cascade/serve",
        requirement("fastapi"),
        requirement("httpx"),
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_open_responses",
    size = "small",
    srcs = ["test_open_responses.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/pipelines",
        "//max/python/max/experimental/cascade/serve",
        requirement("fastapi"),
        requirement("httpx"),
        requirement("pillow"),
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_runtimes",
    size = "small",
    srcs = ["test_runtimes.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/core",
        "//max/python/max/experimental/cascade/grpc_runtime",
        "//max/python/max/experimental/cascade/http_runtime",
        "//max/python/max/experimental/cascade/pipelines",
        "//max/python/max/serve:process_control",
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_max_tokenizer",
    size = "medium",
    srcs = ["test_max_tokenizer.py"],
    tags = [
        "no-sandbox",
        "requires-network",
    ],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/core",
        "//max/python/max/experimental/cascade/workers",
        "//max/python/max/pipelines/lib",
        "//max/tests/integration:hf_repo_lock",
        requirement("numpy"),
        requirement("pytest-asyncio"),
        requirement("transformers"),
    ],
)

modular_py_test(
    name = "test_max_model_worker",
    size = "small",
    srcs = ["test_max_model_worker.py"],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/experimental/cascade/workers",
        "//max/python/max/pipelines/lib",
        requirement("numpy"),
        requirement("pytest-asyncio"),
    ],
)

modular_py_test(
    name = "test_max_model_worker_integration",
    size = "large",
    srcs = ["test_max_model_worker_integration.py"],
    ignore_extra_deps = [
        # SmolLM resolves to the llama3 architecture via string lookup in the
        # pipeline registry, so these are runtime-only deps.
        "//max/python/max/pipelines/architectures/llama3",
        "//max/python/max/pipelines/architectures/llama3_modulev3",
    ],
    tags = [
        "no-sandbox",
        "requires-network",
    ],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/core",
        "//max/python/max/experimental/cascade/workers",
        "//max/python/max/pipelines/architectures/llama3",
        "//max/python/max/pipelines/architectures/llama3_modulev3",
        "//max/python/max/pipelines/lib",
        "//max/tests/integration:hf_repo_lock",
        requirement("numpy"),
        requirement("pytest-asyncio"),
        requirement("transformers"),
    ],
)

modular_py_test(
    name = "test_dummy_imgen",
    size = "small",
    srcs = ["test_dummy_imgen.py"],
    deps = [
        "//max/python/max/experimental/cascade",
        "//max/python/max/experimental/cascade/pipelines",
        requirement("numpy"),
        requirement("pillow"),
        requirement("pytest-asyncio"),
    ],
)
