load("//bazel:api.bzl", "modular_py_binary", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "tests",
    srcs = glob(
        ["*.py"],
        exclude = [
            "dynolog_harness.py",
            "test_hta_import.py",
            "test_profiler_overhead_gpu.py",
        ],
    ),
    env = {
        "MODULAR_ENABLE_PROFILING": "1",
    },
    deps = [
        "//max/python/max:_core",
        "//max/python/max/driver",
        "//max/python/max/engine",
        "//max/python/max/profiler",
        requirement("pytest-asyncio"),
    ],
)

# HTA cross-tool contract test — pinned to Linux x86_64 + NVIDIA GPU because
# the temporal-breakdown assertion requires a real CUDA kernel launch in the
# captured trace (HTA's temporal breakdown classifies time as
# idle/compute/non-compute from CUPTI activity records). HTA is imported via
# pytest.importorskip in the test itself, so the target builds without
# `requirement("hta")` and the test skips cleanly if HTA is absent from the
# runner's pip env. Nothing in CI installs HTA today, so on stock runners
# this import-skips; run it in an environment that provides HTA (`pip
# install HolisticTraceAnalysis`) to exercise the contract.
modular_py_test(
    name = "test_hta_import",
    srcs = ["test_hta_import.py"],
    env = {
        "MODULAR_ENABLE_PROFILING": "1",
    },
    tags = ["gpu"],
    target_compatible_with = ["//:nvidia_gpu"],
    deps = [
        "//max/python/max:_core",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)

# Disabled-profiler hot-path perf-regression gate. Runs on the standard GPU
# test surface like any other ``["gpu"]`` target — the whole test executes in
# ~20s on a B200, dominated by session setup (tiny add-graph hot loop, no
# model download), so there is no need to gate it behind ``manual`` or a
# dedicated CI job. The threshold gates (25% disabled best-case drift, 25%
# enabled-mode ceiling) catch order-of-magnitude regressions, not
# sub-percent fluctuations; no test asserts on sub-percent per-call cost —
# it is bounded by design to one relaxed atomic load (Range.h).
modular_py_test(
    name = "test_profiler_overhead_gpu",
    srcs = ["test_profiler_overhead_gpu.py"],
    env = {
        "MODULAR_ENABLE_PROFILING": "1",
    },
    tags = ["gpu"],
    target_compatible_with = ["//:nvidia_gpu"],
    deps = [
        "//max/python/max:_core",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)

# Long-running harness to end-to-end verify the libkineto <-> Dynolog daemon
# handshake (MXTOOLS-190). Not a test target: it idles running CUDA kernels so
# an external `dyno gputrace --pids <pid>` on-demand request can drive a
# capture. See dynolog_harness.py.
modular_py_binary(
    name = "dynolog_harness",
    srcs = ["dynolog_harness.py"],
    deps = [
        "//max/python/max:_core",
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)
