load("//bazel:api.bzl", "mojo_test")

package(default_visibility = ["//max:consumers"])

[
    mojo_test(
        name = src + ".test",
        size = "large",
        srcs = [src],
        tags = ["gpu"],
        target_compatible_with = ["//:has_gpu"],
        deps = [
            "@mojo//:std",
            "@mojo//:test_utils",
        ],
    )
    for src in glob(["*.mojo"])
]
